<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="12dp">

    <!--<ImageView android:src="@drawable/logo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="72dp"-->
    <!--android:layout_marginBottom="24dp"-->
    <!--android:layout_gravity="center_horizontal" />-->

    <!--  Name Label -->
    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"/>

    <!--  URL Label -->
    <EditText
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:inputType="textUri"/>

    <!-- Email -->
    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"/>

    <!-- Password Label -->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <!-- Signup Button -->
    <CheckBox
        android:id="@+id/make_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_default"/>

    <Button
        android:id="@+id/add_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/add_server"/>
</LinearLayout>
