<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/add_server_width"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/mstream_logo"
        android:id="@+id/imageView"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentStart="true" />

    <!--  Name Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_name_layout"
        style="@style/TextInputLayoutStyle"
        app:errorEnabled="true">

    </android.support.design.widget.TextInputLayout>

    <!--  URL Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_url_layout"
        style="@style/TextInputLayoutStyle"
        app:errorEnabled="true">

    </android.support.design.widget.TextInputLayout>

    <!-- Username -->
    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:id="@+id/textInputLayout">

    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        style="@style/TextInputLayoutStyle">

    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <CheckBox
        android:id="@+id/make_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_default"
        android:textColor="@color/medium_grey"
        android:layout_below="@+id/input_password"
        android:layout_alignParentStart="true" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/make_default"
        android:layout_alignParentStart="true">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".50"
        android:text="@string/add_server"
        android:theme="@style/AppTheme.Button" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/test_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".50"
        android:text="@string/test_server"
        android:theme="@style/AppTheme.Button" />

    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/input_username"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/input_url"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:inputType="textUri"
        android:layout_below="@+id/input_name"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />
</RelativeLayout>
